[package]
name = "roux-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maybe-async = "0.2.7"
roux = "2.2.6"
serde = "1.0.160"
serde_derive = "1.0.160"
tokio = { version="1.28.0", features=["full"] }
toml = "0.7.3"
